# python_linter_test

./: .pre-commit-config.yaml  LICENSE  README.md  black_flake8_pylint_test.py  pyproject.toml  test.py
